# text_matching

./: README.md  pyproject.toml  requirements.txt
docs/: conf.py  index.rst  modules.rst  text_matching.predictors.base.rst  text_matching.predictors.distance.rst  text_matching.predictors.rst  text_matching.predictors.vectorized.rst  text_matching.rst  text_matching.tests.rst  text_matching.transformers.rst  text_matching.utils.rst
examples/: bow_matching.ipynb  fuzzy_matching.ipynb
examples/data/: product_descriptions.csv  store_names.csv
text_matching/predictors/base/: base.py
text_matching/predictors/distance/: __init__.py  fuzzy.py
text_matching/predictors/vectorized/: bow.py
text_matching/tests/: conftest.py  test_fuzzy_predictor.py
text_matching/transformers/: text_preprocessor.py
text_prediction/predictors/distance/: fuzzy.py
text_prediction/tests/: test_fuzzy_predictor.py
text_prediction/utils/: scorers.py  text_processing.py
