[tool.poetry]
name = "text-search"
version = "0.1.0"
description = "Example using various search methods."
authors = ["Greg Barbieri <gfbarbieri@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.3"
sqlalchemy = "^2.0.39"
ipykernel = "^6.29.5"
rapidfuzz = "^3.12.2"
scikit-learn = "^1.6.1"
pytest = "^8.3.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

package-mode = false